--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+div.dt-container select.dt-input{
+    padding-right: 2rem!important;
+    margin-right: 5px;
+}
