--- a/src/templates/6_UZ_ChildDI_Entries_Exists_Sheet_uz.html
+++ b/src/templates/6_UZ_ChildDI_Entries_Exists_Sheet_uz.html
@@ -108,7 +108,7 @@
                 <div class="grid grid-cols-5 gap-4 mt-4">
                     <div class="col-span-2">I4a. Viloyat</div>
                     <div class="col-span-3">
-                        <input type="text" id="i4a" name="i4a" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
+                        <input type="text" id="i4a" name="i4a" disabled class="disabled:bg-gray-100 bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                         <small class="italic text-red-500">(I4 dan avtomatik ravishda olinadi)</small>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
                 <div class="grid grid-cols-5 gap-4 mt-4">
                     <div class="col-span-2">I4b. Tuman</div>
                     <div class="col-span-3">
-                        <input type="text" id="i4b" name="i4b" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
+                        <input type="text" id="i4b" name="i4b" disabled class="disabled:bg-gray-100 bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                         <small class="italic text-red-500">(I4 dan avtomatik ravishda olinadi)</small>
                     </div>
                 </div>
@@ -145,6 +145,179 @@
             </div>
         </div>
 
+        <h2 class="mt-10 mb-4 text-xl font-medium text-gray-700">2 HISOBOT YILINING 1-YANVAR VA 31-DEKABR ORASIDA USHBU MUASSASAGA QABUL QILINISHI  VA CHIQISHI</h2>
+        <div class="grid grid-cols-3 gap-4 items-center mt-4">
+            <div class="col-span-2">TNR0. Hisobot yilidan avvalgi yilning 31 dekabr holatida ushbu muassasadagi bolalarning umumiy soni</div>
+            <div class="col-span-1">
+                <input type="text" id="tnr0" name="tnr0" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
+            </div>
+        </div>
+        <div class="grid grid-cols-3 gap-4 items-center mt-4">
+            <div class="col-span-2">NET1. Hisobot yilining  1-yanvardan 31-dekabrgacha ushbu muassasaga biron bir qabul qilinish (har qanday usul bilan) bo&#39;lganmi?</div>
+            <div class="col-span-1 flex gap-4">
+                <div class="flex items-center">
+                    <input id="net1-1" type="radio" value="1" name="net1" class="w-4 h-4 text-blue-600 border-gray-300 focus:ring-blue-500">
+                    <label for="net1-1" class="ms-2 text-sm font-medium text-gray-900">1 Ha</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="net1-2" type="radio" value="0" name="net1" class="w-4 h-4 text-blue-600 border-gray-300 focus:ring-blue-500">
+                    <label for="net1-2" class="ms-2 text-sm font-medium text-gray-900">0 Yo&#39;q</label>
+                </div>
+            </div>
+        </div>
+        <small class="italic">Ha bo&#39;lsa,</small>
+        <p class="font-medium mt-6">Hisobot yili davomida ushbu muassasaga qabul qilinishlar soni</p>
+        <table class="w-full" aria-describedby="Hisobot yili davomida ushbu muassasaga qabul qilinishlar soni">
+            <thead>
+                <tr class="border-b pb-1 mb-1">
+                    <th class="p-2"></th>
+                    <th class="p-2">O&#39;g&#39;il bolalar</th>
+                    <th class="p-2">Qiz bolalar</th>
+                    <th class="p-2">Jami</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="border-b">
+                    <td class="p-2">NET1a. 0-2 yoshli bolalar qabul qilinishi</td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="net1a_boys" name="net1a_boys" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="net1a_girls" name="net1a_girls" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="net1a_total" name="net1a_total" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                </tr>
+                <tr class="border-b">
+                    <td>NET1b. 3-6 yoshli bolalar qabul qilinishi</td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="net1b_boys" name="net1b_boys" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="net1b_girls" name="net1b_girls" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="net1b_total" name="net1b_total" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                </tr>
+                <tr class="border-b">
+                    <td>NET1c. 7-10 yoshli bolalar qabul qilinishi</td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="net1c_boys" name="net1c_boys" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="net1c_girls" name="net1c_girls" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="net1c_total" name="net1c_total" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                </tr>
+                <tr class="border-b">
+                    <td>NET1d. 11-14 yoshli bolalar qabul qilinishi</td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="net1d_boys" name="net1d_boys" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="net1d_girls" name="net1d_girls" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="net1d_total" name="net1d_total" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                </tr>
+                <tr class="border-b">
+                    <td>NET1e. 15-17 yoshli bolalar qabul qilinishi</td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="net1e_boys" name="net1e_boys" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="net1e_girls" name="net1e_girls" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="net1e_total" name="net1e_total" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                </tr>
+                <tr class="border-b">
+                    <td>
+                        <p class="block">TNET. Hisobot yili davomida ushbu muassasaga jami qabul qilinishlar</p>
+                        <small class="italic">Avtomatik ravishda hisoblab chiqiladi</small>
+                    </td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="tnet_boys" name="tnet_boys" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="tnet_girls" name="tnet_girls" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="tnet_total" name="tnet_total" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <p class="mt-6 font-medium">Bolalarning muqobil vasiylik  tizimiga / ixtisoslashgan maktab-internatlarga yangi qabul qilinishlar</p>
+        <table class="w-full" aria-describedby="Bolalarning muqobil vasiylik  tizimiga / ixtisoslashgan maktab-internatlarga yangi qabul qilinishlar">
+            <thead>
+                <tr class="border-b pb-1 mb-1">
+                    <th class="p-2"></th>
+                    <th class="p-2">O&#39;g&#39;il bolalar</th>
+                    <th class="p-2">Qiz bolalar</th>
+                    <th class="p-2">Jami</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="border-b">
+                    <td class="p-2">NES1. Oilalardan kelgan kirishlar</td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="nes1_boys" name="nes1_boys" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="nes1_girls" name="nes1_girls" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="nes1_total" name="nes1_total" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                </tr>
+                <tr class="border-b">
+                    <td>NES2. Tug&#39;ruqxona/kasalxonadan tushgan yoki qoldirib ketilgan bolalar ning qabul qilinishi</td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="nes2_boys" name="nes2_boys" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="nes2_girls" name="nes2_girls" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="nes2_total" name="nes2_total" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                </tr>
+                <tr class="border-b">
+                    <td>NES3. Boshqa vaziyatlarda bolalarning qabul qilinishi</td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="nes3_boys" name="nes3_boys" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="nes3_girls" name="nes3_girls" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="nes3_total" name="nes3_total" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                </tr>
+                <tr class="border-b">
+                    <td>
+                        <p class="block">NEST. Tizimga yangi qabul qilinishilar soni - Jami</p>
+                        <small class="italic">Avtomatik ravishda hisoblab chiqiladi</small>
+                    </td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="nest_boys" name="nest_boys" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="nest_girls" name="nest_girls" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                    <td class="p-2 text-center">
+                        <input type="text" id="nest_total" name="nest_total" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 
 
     </form>
