--- a/src/templates/1_UZ_ChildDI_Children_in_the_child_care_system_uz.html
+++ b/src/templates/1_UZ_ChildDI_Children_in_the_child_care_system_uz.html
@@ -5004,11 +5004,11 @@
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="lk22_3_3-1" type="radio" value="1" name="lk22_3_3" class="w-4 h-4 text-blue-600 border-gray-300 focus:ring-blue-500">
-                    <label for="lk22_3_3-1" class="ms-2 text-sm text-gray-900">undefined</label>
+                    <label for="lk22_3_3-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
                 </div>
                 <div class="flex items-center">
                     <input id="lk22_3_3-2" type="radio" value="0" name="lk22_3_3" class="w-4 h-4 text-blue-600 border-gray-300 focus:ring-blue-500">
-                    <label for="lk22_3_3-2" class="ms-2 text-sm text-gray-900">undefined</label>
+                    <label for="lk22_3_3-2" class="ms-2 text-sm text-gray-900">0. Yo&#39;q</label>
                 </div>
             </div>
         </div>
