--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,7 +2,169 @@
 @tailwind components;
 @tailwind utilities;
 
-div.dt-container select.dt-input{
-    padding-right: 2rem!important;
+div.dt-container select.dt-input {
+    padding-right: 2rem !important;
     margin-right: 5px;
+}
+
+/* span.debugSpan, span.addRemoveErrorSpan { */
+span.debugSpan,
+span.errorSpan {
+    color: red;
+    /* display: block; */
+    margin: 0px 5px;
+}
+
+.inputErrorStyle {
+    border: 1px solid red !important;
+    background-color: rgba(255, 0, 0, 0.1);
+}
+
+.overrideBorder {
+    background-color: rgba(255, 0, 0, 0.1);
+    padding: 5px;
+}
+
+.error-in-field {
+    border: 1px solid red;
+    background-color: rgba(255, 0, 0, 0.1);
+}
+
+.error-in-field:focus {
+    border: 1px solid red;
+    background-color: rgba(255, 0, 0, 0.1);
+    box-shadow: 0 0 0 0.25rem rgb(255 0 0 / 25%);
+}
+
+.error-in-radio {
+    background-color: rgba(255, 0, 0, 0.1);
+    border-radius: 3px;
+    padding: 5px;
+}
+
+.error-in-radio .form-check-inline {
+    margin-bottom: 0px;
+}
+
+/* #debugForm {
+    display: flex;
+    align-items: center;
+}
+
+#debugForm svg {
+    width: 19px;
+} */
+
+.tippy-box[data-theme~=light-red] {
+    background-color: rgb(255, 228, 228);
+    padding: 2px 5px;
+    border-radius: 3px;
+    border: 1px solid red;
+    color: #000;
+    box-shadow: 0 4px 14px -2px rgba(0, 8, 16, .08)
+}
+
+.tippy-box[data-theme~=light-red]>.tippy-backdrop {
+    background-color: #fff
+}
+
+.tippy-box[data-theme~=light-red]>.tippy-arrow::after,
+.tippy-box[data-theme~=light-red]>.tippy-svg-arrow::after {
+    content: "";
+    position: absolute;
+    z-index: -1
+}
+
+.tippy-box[data-theme~=light-red]>.tippy-arrow::after {
+    border-color: transparent;
+    border-style: solid
+}
+
+.tippy-box[data-theme~=light-red][data-placement^=top]>.tippy-arrow::before {
+    border-top-color: red
+}
+
+.tippy-box[data-theme~=light-red][data-placement^=top]>.tippy-arrow::after {
+    border-top-color: red;
+    border-width: 7px 7px 0;
+    top: 17px;
+    left: 1px
+}
+
+.tippy-box[data-theme~=light-red][data-placement^=top]>.tippy-svg-arrow>svg {
+    top: 16px
+}
+
+.tippy-box[data-theme~=light-red][data-placement^=top]>.tippy-svg-arrow::after {
+    top: 17px
+}
+
+.tippy-box[data-theme~=light-red][data-placement^=bottom]>.tippy-arrow::before {
+    border-bottom-color: red;
+    bottom: 16px
+}
+
+.tippy-box[data-theme~=light-red][data-placement^=bottom]>.tippy-arrow::after {
+    border-bottom-color: red;
+    border-width: 0 7px 7px;
+    bottom: 17px;
+    left: 1px
+}
+
+.tippy-box[data-theme~=light-red][data-placement^=bottom]>.tippy-svg-arrow>svg {
+    bottom: 16px
+}
+
+.tippy-box[data-theme~=light-red][data-placement^=bottom]>.tippy-svg-arrow::after {
+    bottom: 17px
+}
+
+.tippy-box[data-theme~=light-red][data-placement^=left]>.tippy-arrow::before {
+    border-left-color: red
+}
+
+.tippy-box[data-theme~=light-red][data-placement^=left]>.tippy-arrow::after {
+    border-left-color: rgba(255, 152, 152);
+    border-width: 7px 0 7px 7px;
+    left: 17px;
+    top: 1px
+}
+
+.tippy-box[data-theme~=light-red][data-placement^=left]>.tippy-svg-arrow>svg {
+    left: 11px
+}
+
+.tippy-box[data-theme~=light-red][data-placement^=left]>.tippy-svg-arrow::after {
+    left: 12px
+}
+
+.tippy-box[data-theme~=light-red][data-placement^=right]>.tippy-arrow::before {
+    border-right-color: red;
+    right: 16px
+}
+
+.tippy-box[data-theme~=light-red][data-placement^=right]>.tippy-arrow::after {
+    border-width: 7px 7px 7px 0;
+    right: 17px;
+    top: 1px;
+    border-right-color: red
+}
+
+.tippy-box[data-theme~=light-red][data-placement^=right]>.tippy-svg-arrow>svg {
+    right: 11px
+}
+
+.tippy-box[data-theme~=light-red][data-placement^=right]>.tippy-svg-arrow::after {
+    right: 12px
+}
+
+.tippy-box[data-theme~=light-red]>.tippy-svg-arrow {
+    fill: red
+}
+
+.tippy-box[data-theme~=light-red]>.tippy-svg-arrow::after {
+    background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTYiIGhlaWdodD0iNiIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48cGF0aCBkPSJNMCA2czEuNzk2LS4wMTMgNC42Ny0zLjYxNUM1Ljg1MS45IDYuOTMuMDA2IDggMGMxLjA3LS4wMDYgMi4xNDguODg3IDMuMzQzIDIuMzg1QzE0LjIzMyA2LjAwNSAxNiA2IDE2IDZIMHoiIGZpbGw9InJnYigyNTUsIDE1MiwgMTUyKSIvPjwvc3ZnPg==);
+    background-size: 16px 6px;
+    width: 16px;
+    height: 6px
 }
